<resources>
    <string name="app_name">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg">消息</string>
    <string name="create_group">创建群聊</string>
    <string name="fans">粉丝</string>
    <string name="like">赞</string>
    <string name="at">\@我的</string>
    <string name="comment">评论</string>
</resources>